image fix and Quick links aligned

--- a/style.css
+++ b/style.css
@@ -59,14 +59,12 @@ html, body {
 
 .header-img1{
   display: flex;
-  height: 100%;
-  width:10%;
+  height: 10rem;
 }
 
 .header-img2{
   display: flex;
-  height: 100%;
-  width:10%;
+  height:10rem;
 }
 
 .header-text {
